# mpl-makefig

./: LICENSE  pyproject.toml  readme.md  todo.md
src/: makefig.py
